<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cs.b07.cscb07project.activities.UserControl">

    <TextView
        android:id="@+id/welcome_user_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_user"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/welcome_text"/>





    <Button
        android:id="@+id/view_booked_flights_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/view_booked_flights_text"
        android:onClick="viewBookedFlights" />

    <Button
        android:id="@+id/view_all_flights_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/view_all_flights_text"
        android:onClick="searchFlights" />

    <Button
        android:id="@+id/view_personal_info_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/view_personal_info_text"
        android:onClick="editPersonalInfo" />

    <Button
        android:id="@+id/search_itinerary_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/view_all_itineraries_text"
        android:onClick="searchItineraries"/>

    <TextView
        android:id="@+id/admin_mode_text"
        android:text="@string/admin_mode_text"
        android:visibility="gone"
        android:paddingTop="@dimen/padding_btwn_views"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/admin_text"
        android:textColor="@color/redAdminColor"/>


    <Button
        android:id="@+id/upload_flights_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/upload_flights_text"
        android:onClick="uploadFlights"/>

    <Button
        android:id="@+id/upload_clients_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/upload_clients_text"
        android:onClick="uploadClients"/>

    <Button
        android:id="@+id/search_flight_to_edit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/edit_flight_text"
        android:onClick="searchFlightsToEdit"/>


    <TextView
        android:id="@+id/enter_user_text"
        android:text="@string/enter_user_text"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/admin_text"
        android:paddingTop="@dimen/padding_btwn_views"/>

    <Button
        android:id="@+id/into_client"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/view_client_mode"
        android:onClick="enterClient"/>


</LinearLayout>
