<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="cs.b07.cscb07project.activities.SearchItineraries"
    android:orientation="vertical">


    <EditText
        android:id="@+id/origin_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:hint="@string/search_origin"/>

    <EditText
        android:id="@+id/destination_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:hint="@string/search_destination"/>

    <EditText
        android:id="@+id/date_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:hint="@string/search_date"/>

    <Button
        android:id="@+id/submit_query"
        android:text="@string/search_itineraries"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="searchItinerary"/>

</LinearLayout>
