<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cs.b07.cscb07project.activities.SearchFlightNum">


    <TextView
        android:text="@string/enter_flight_num_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/flight_num_text_field"
        android:singleLine="true"
        android:hint="@string/flight_number_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:hint="@string/search_button_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="getFlight"/>
</LinearLayout>
