<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cs.b07.cscb07project.activities.FlightResultToEdit">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/flight_airline">
            </TextView>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/flight_airline_field"
                android:layout_marginLeft="20dp"
                android:hint="@string/flight_airline"
                android:singleLine="true">
            </EditText>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_gravity="center_horizontal"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/flight_origin">
            </TextView>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/flight_origin_field"
                android:layout_marginLeft="20dp"
                android:hint="@string/flight_origin"
                android:singleLine="true">
            </EditText>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/flight_origin">
            </TextView>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/flight_destination_field"
                android:layout_marginLeft="20dp"
                android:hint="@string/flight_destination"
                android:singleLine="true">
            </EditText>

            <Space
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/flight_departure_time">
            </TextView>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/flight_departure_field"
                android:layout_marginLeft="20dp"
                android:inputType="datetime"
                android:hint="@string/flight_departure_time"
                android:singleLine="true">
            </EditText>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/flight_arrival_time">
            </TextView>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/flight_arrival_field"
                android:layout_marginLeft="20dp"
                android:inputType="datetime"
                android:hint="@string/flight_arrival_time"
                android:singleLine="true">
            </EditText>

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/flight_cost">
            </TextView>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/flight_price_field"
                android:inputType="numberDecimal"
                android:layout_marginLeft="20dp"
                android:hint="@string/flight_cost"
                android:singleLine="true">
            </EditText>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/flight_num_seats">
            </TextView>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/flight_seats"
                android:inputType="number"
                android:layout_marginLeft="20dp"
                android:hint="@string/flight_num_seats"
                android:singleLine="true">
            </EditText>

            <Space
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"/>

            <Button
                android:text="@string/flight_submit_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="submitFlight"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
